--- a/src/StockportWebapp/wwwroot/assets/sass/stockportgov/modules/_findOutMore.scss
+++ b/src/StockportWebapp/wwwroot/assets/sass/stockportgov/modules/_findOutMore.scss
@@ -77,6 +77,7 @@
                 
                 .find-out-more-banner-content {
                     padding-inline-start: 3em;
+                    padding-inline-end: 0 !important;
                 }
 
                 &:nth-child(n+2) {
@@ -84,6 +85,7 @@
 
                     .find-out-more-banner-content {
                         padding-inline-start: 0 !important;
+                        padding-inline-end: 3em !important;
                     }
                 }
 
@@ -92,6 +94,7 @@
 
                     .find-out-more-banner-content {
                         padding-inline-start: 3em !important;
+                        padding-inline-end: 0 !important;
                     }
                 }
             }
@@ -105,8 +108,11 @@
             }
 
             .find-out-more-banner-content {
-                padding-inline-start: 3em;
-
+                @media #{$desktop} {
+                    padding-inline-start: 3em;
+                    padding-inline-end: 0;
+                }
+                
                 @media #{$tablet} {
                     padding: 0;
                 }
@@ -135,8 +141,11 @@
                 margin-bottom: 0;
             }
 
-            .find-out-more-banner-content {
-                padding-inline-start: 0;
+            @media #{$desktop} {
+                .find-out-more-banner-content {
+                    padding-inline-start: 0;
+                    padding-inline-end: 3em;
+                }
             }
 
             .find-out-more-banner__button {
